macros/tests/trybuild/const.stderr
error: cannot use `serde_args::generate` macro on const
 --> tests/trybuild/const.rs:4:1
  |
4 | const FOO: usize = 0;
  | ^^^^^^^^^^^^^^^^^^^^^
