macros/tests/trybuild/const.rs
use serde_args_macros::generate;

#[generate]
const FOO: usize = 0;

fn main() {}
